--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "fcm-node": "^1.3.0",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.3.0",
     "method-override": "^3.0.0",
