--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MON_ATL_PSWD = nasr-admin-password
 MON_ATL_URME = nasr-admin
 JWT_PRIVATE = _aGj_MedM$Cl7Sv6?+8933e#P+r_o1
+FRBS_SRVR_K = AAAANXbP3_k:APA91bGSG_tPmP-qvjWEhseL8XBaa7afjxI5DJghD_M4R1qDaVyhcx0Y9VfKXxNTjaaSAF_dgqX-0Sf6sRZAU0_uqthjK_WXFoLjvBwNI-988I5RML-v4CrKpz6Egod2MpQXx2-j6_XE
