--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "fcm-node": "^1.3.0",
+    "fcm-push": "^1.1.3",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.3.0",
     "method-override": "^3.0.0",
