--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.3.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.2.14",
+    "morgan": "^1.9.1",
     "multer": "^1.3.1",
     "multer-gridfs-storage": "^3.2.2"
   }
